--- a/Yatzy_Ny/Yatzy.csproj
+++ b/Yatzy_Ny/Yatzy.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Terning.cs" />
     <Compile Include="Bæger.cs" />
+    <Compile Include="Muligheder.cs" />
+    <Compile Include="Spillere.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
